# traderslab

./: .gitignore  README.md  database.py  main.py  pyproject.toml  requirements.txt  run_server.py
frontend/: api.js  app.js  index.html  style.css
frontend-react/: index.html  package-lock.json  package.json  vite.config.js
frontend-react/src/: App.jsx  index.css  main.jsx
frontend-react/src/components/: BinanceConnectForm.jsx  EvaluationPanel.jsx  MT5ConnectForm.jsx  MetricCard.jsx  MiniChart.jsx  Modal.jsx  Navbar.jsx  OAuthButtons.jsx  Onboarding.jsx  ProCharts.jsx  Sidebar.jsx  UI.jsx
frontend-react/src/evaluation/: evaluation.bundle.js  index.js
frontend-react/src/hooks/: useAuth.jsx  useSidebar.jsx
frontend-react/src/lib/: api.js  pageCache.js  utils.js
frontend-react/src/pages/: Compare.jsx  Dashboard.jsx  (+7 more)
frontend/evaluation/: evaluation.bundle.js  evaluation.comparison.ts  evaluation.formatters.ts  evaluation.helpers.ts  evaluation.run.ts  evaluation.test.ts  evaluation.types.ts  evaluation.variant.ts  evaluation.warnings.ts
models/: binance_connection.py  mt5_connection.py  run.py  strategy.py  trade.py  user.py  variant.py
routers/: analysis.py  auth.py  binance_sync.py  compare.py  mt5_sync.py  runs.py  strategies.py  variants.py
schemas/: analysis.py  binance_connection.py  mt5_connection.py  run.py  strategy.py  trade.py  user.py  variant.py
services/: aggregation.py  analysis.py  auth.py  binance_sync.py  csv_parser.py  llm_mapper.py  metrics.py  mt5_parser.py  mt5_sync.py
tests/: test_analysis.py  test_api.py  test_metrics.py
