[project]
name = "traderslab"
version = "0.1.0"
description = "Application pour traders — organiser des stratégies, documenter des variantes, comparer des backtests."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "pydantic>=2.10",
    "pandas>=2.2",
    "python-multipart>=0.0.18",
    "psycopg2-binary>=2.9",
]

